--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.26.1",
     "react-simple-typewriter": "^5.0.1"
   },
