--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "@yaireo/tagify": "^4.27.0",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "moment": "^2.30.1",
@@ -17,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-emoji": "^5.9.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.26.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5"
