--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@yaireo/tagify": "^4.27.0",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
+    "gsap": "^3.12.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
