--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-input-emoji": "^5.9.0",
     "react-places-autocomplete": "^7.3.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.14.1",
