--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-emoji": "^5.9.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-places-autocomplete": "^7.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
